<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskControls</string>
    <string name="hello_world">Hello world!</string>
    <string name="textView">I am TextView</string>
    <string name="button">I am Button</string>
    <string name="toggleOn">On</string>
    <string name="chkText">Selected</string>
    <string name="rdMale">Male</string>
    <string name="rdFemale">Female</string>
    <string name="chkTextView">CheckedTextView</string>
    <string name="edName">Your Name</string>
    <string name="autocomplete">Enter City Name</string>
    <string name="multiAutocomplete">Enter Multiple City (Use Comma)</string>
    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>

    <string-array name="arr_City">
        <item>Ahmedabad</item>
        <item>Mumbai</item>
        <item>Himmatnagar</item>
        <item>Surat</item>
    </string-array>

    <color name="colorChronometer">#110000aa</color>
    <color name="colorRed">#11aa0000</color>
    <color name="colorGreen">#1100aa00</color>

</resources>